--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-errors": "~1.6.2",
     "jquery": "^3.4.0",
     "morgan": "~1.9.0",
+    "mssql": "^5.1.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   }
