--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.4.0",
     "morgan": "~1.9.0",
     "mssql": "^5.1.0",
+    "nodemon": "^1.19.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   }
