--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
+    "cryptr": "^4.0.2",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
